--- a/src/app/layouts/default-layout/default-layout.component.scss
+++ b/src/app/layouts/default-layout/default-layout.component.scss
@@ -39,6 +39,9 @@ app-default-layout {
 // ============================================= */
 .main-content {
   flex: 1 0 auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 /* =============================================
